--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
-	<head>Group 2 Crane Project</head>
-	<body></body>
+	<head>
+		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+		<title>Result</title>
+	</head>
+	<body>
+		<p>Becca!</p>
+	</body>
 </html>
