--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
 	<head>
 		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-		<title>Result</title>
+		<title>Group 2 Crane Project</title>
 	</head>
 	<body>
-		<p>Becca!</p>
+		<div id="header"></div>
+		<div id="sideBar"></div>
+		<div id="mainText"></div>
+		<div id="footer"></div>
 	</body>
 </html>
