--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
 		<title>Group 2 Crane Project</title>
 	</head>
 	<body>
-		<div id="header"></div>
-		<div id="sideBar"></div>
-		<div id="mainText"></div>
+		<div id="header">
+			<p id="title">Group 2 Crane Project 2015</p>
+		</div>
+		<div class="left">
+			<p> Group Members </p>
+		</div>
+		<div class="right">
+			<p>Osvaldo Chimalpopoca, Grace Moraca and Becca Stokes
+		</div>
 		<div id="footer"></div>
 	</body>
 </html>
