--- a/index.html
+++ b/index.html
@@ -8,48 +8,56 @@
 		<div id="header">
 			<p id="title">Group 2 Crane Project 2015</p>
 		</div>
-		<div class="left">
-			<p> Group Members </p>
+		<div>
+			<div class="left">
+				<p> Group Members </p>
+			</div>
+			<div class="right">
+				<p>Osvaldo Chimalpopoca, Grace Moraca and Becca Stokes</p>
+			</div>
 		</div>
-		<div class="right">
-			<p>Osvaldo Chimalpopoca, Grace Moraca and Becca Stokes
+		<div>
+			<div class="left">
+				<p>How it Works</p>
+			</div>
+			<div class = "right">
+				<p>In this project, students were to construct a crane that would lift a 1 pound weight at least two inches, using a HS-425 Standard Servo-motor as the only component used to provide any lift, out of thin aluminum sheets. Students were to construct their crane such that it was within the limitations set by the course and under the 20 ounce weight limit. Additionally, students were to successfully complete the task within the three design reviews reserved for the project.</p>
+				<p>For our crane, we decided to approach the obstacle through the 4 in. by 8 in. hole. We designed our project such that the entire mechanism performed like an arm. That is to say, our entire crane was essentially composed of three components: a base, an arm to the plane of hole, and an arm to the weight; along with the servo to provide the lift for the weight. Each of the three structural components was constructed using trusses, such that when the pieces were mated with each other, they would perform as a single structure. The servo was attached to the end of the second arm through a specially made case (refer to pictures for more). The case was build such that it limited the amount of motion the servo had while attempting to lift the weight. Attached to the servo, was an arm made from plastic provided that connected the structure to the weight. The plastic arm had a loop that would catch the weight and provide the lift. Additionally, the plastic arm was cut such that it allowed the servo to rotate fully. With all the components mated, the mechanism would be fed through the obstacle and clamped down at the base's bottom for testing.</p>
+				<p>Overall, in making this crane, we had two main focuses. The first was to make the structure such that it acted as a single unit. To do this, as previously mentioned, our three main structural components were made out of trusses. The second was to devise a contraption for the servo such that it did not move while lifting the weight. To limit the mobility of the servo, a casing was constructed and attached to the end of the second arm of the structure. Once all the components where assembled, they were brought together and tested. The final product was able to lift the weight 2.250 inches while weighting 18.7 ounces. </p>
+			</div>
 		</div>
-		<div class="left">
-			<p>How it Works</p>
+		<div>
+			<div class="left">
+				<p>Theoretical Performance</p>
+			</div>
+			<div class="right">
+				<p></p>
+			</div>
 		</div>
-		<div class = "right">
-			<p>In this project, students were to construct a crane that would lift a 1 pound weight at least two inches, using a HS-425 Standard Servo-motor as the only component used to provide any lift, out of thin aluminum sheets. Students were to construct their crane such that it was within the limitations set by the course and under the 20 ounce weight limit. Additionally, students were to successfully complete the task within the three design reviews reserved for the project.</p>
-			<p>For our crane, we decided to approach the obstacle through the 4 in. by 8 in. hole. We designed our project such that the entire mechanism performed like an arm. That is to say, our entire crane was essentially composed of three components: a base, an arm to the plane of hole, and an arm to the weight; along with the servo to provide the lift for the weight. Each of the three structural components was constructed using trusses, such that when the pieces were mated with each other, they would perform as a single structure. The servo was attached to the end of the second arm through a specially made case (refer to pictures for more). The case was build such that it limited the amount of motion the servo had while attempting to lift the weight. Attached to the servo, was an arm made from plastic provided that connected the structure to the weight. The plastic arm had a loop that would catch the weight and provide the lift. Additionally, the plastic arm was cut such that it allowed the servo to rotate fully. With all the components mated, the mechanism would be fed through the obstacle and clamped down at the base's bottom for testing.</p>
-			<p>Overall, in making this crane, we had two main focuses. The first was to make the structure such that it acted as a single unit. To do this, as previously mentioned, our three main structural components were made out of trusses. The second was to devise a contraption for the servo such that it did not move while lifting the weight. To limit the mobility of the servo, a casing was constructed and attached to the end of the second arm of the structure. Once all the components where assembled, they were brought together and tested. The final product was able to lift the weight 2.250 inches while weighting 18.7 ounces. </p>
+		<div>
+			<div class = "left">
+				<p> Interesting Features </p>
+			</div>
+			<div class="right">
+				<ul>
+					<li>Tension Wires 
+						<p>We used tension wires, made from gauge 18 aluminum wire in order to provide support against bending and twisting moments in the various sections of the crane structure. We added wires, like a cable bridge, along the arm of the structure in order to reduce the bending moment caused by the force of the weight on the lever. Additionally, we added diagonal wiring in the truss structure to prevent torsion in that section by adding forces along these diagonals.</p>
+					</li>
+					<li>Servo Casing
+						<p>One of the weak spots in the original design was the support structure for the servo itself. We improved on this in our second design by creating a casing for the servo that supported the motor along its entire body, which better supported the forces. Additionally, due to the fact that the casing wrapped around the entire body of the motor, it supported the force of the motor on the structure really well because it had a large surface area to distribute the force over.</p>
+					</li>
+				</ul>
+			</div>
 		</div>
-		<div class="left">
-			<p>Theoretical Performance</p>
+		<div>
+			<div class = "left">
+				<p>How it takes advantage of structural principles from class</p>
+			</div>
+			<div class = "right">
+				<p>In our class, we learned that for a beam with a rectangular cross section, the beam will be more resistant to bending if the beam is vertical with respect to the bending moment (Diagram 1) than if it were horizontal (Diagram 2).  We also know that due to mass distribution, an L-shaped beam (Diagram 3) will have a larger moment of inertia and thus will be more resistant to bending than a vertical rectangular beam of the same cross-sectional area (Diagram 1).  We implemented these ideas in our design by using L-shaped strips of aluminum in the lifting arm instead of simply vertical strips.  This can be seen in [Photo 6].  </p>
+				<p>We also learned that having a closed, but not solid cross section for a beam (Diagram 4) is more effective at resisting twisting than a non-solid open cross section (Diagram 5) or simply a flat beam (Diagram 6).  We utilized this concept in the construction of the support arm.  We joined the four horizontal strips to create a closed loop.  Since the support arm was designed like a truss, it acts more closely to a beam and so we know...BLAH BLAH BLAH.  I'm going to bed...</p>
+			</div>
 		</div>
-		<div class="right">
-			<p></p>
-		</div>
-		<div class = "left">
-			<p> Interesting Features </p>
-		</div>
-		<div class="right">
-			<ul>
-				<li>Tension Wires 
-					<p>We used tension wires, made from gauge 18 aluminum wire in order to provide support against bending and twisting moments in the various sections of the crane structure. We added wires, like a cable bridge, along the arm of the structure in order to reduce the bending moment caused by the force of the weight on the lever. Additionally, we added diagonal wiring in the truss structure to prevent torsion in that section by adding forces along these diagonals.</p>
-				</li>
-				<li>Servo Casing
-					<p>One of the weak spots in the original design was the support structure for the servo itself. We improved on this in our second design by creating a casing for the servo that supported the motor along its entire body, which better supported the forces. Additionally, due to the fact that the casing wrapped around the entire body of the motor, it supported the force of the motor on the structure really well because it had a large surface area to distribute the force over.</p>
-				</li>
-			<ul>
-		</div>
-		<div class = "left">
-			<p>How it takes advantage of structural principles from class</p>
-		</div>
-		<div class = "right">
-			<p>In our class, we learned that for a beam with a rectangular cross section, the beam will be more resistant to bending if the beam is vertical with respect to the bending moment (Diagram 1) than if it were horizontal (Diagram 2).  We also know that due to mass distribution, an L-shaped beam (Diagram 3) will have a larger moment of inertia and thus will be more resistant to bending than a vertical rectangular beam of the same cross-sectional area (Diagram 1).  We implemented these ideas in our design by using L-shaped strips of aluminum in the lifting arm instead of simply vertical strips.  This can be seen in [Photo 6]. </p>
-			<p>We also learned that having a closed, but not solid cross section for a beam (Diagram 4) is more effective at resisting twisting than a non-solid open cross section (Diagram 5) or simply a flat beam (Diagram 6).  We utilized this concept in the construction of the support arm.  We joined the four horizontal strips to create a closed loop.  Since the support arm was designed like a truss, it acts more closely to a beam and so we know…..BLAH BLAH BLAH.  i’m going to bed...</p>
-		</div>
-
-
 		<div id="footer"></div>
 	</body>
 </html>
