--- a/index.html
+++ b/index.html
@@ -54,8 +54,17 @@
 				<p>How it takes advantage of structural principles from class</p>
 			</div>
 			<div class = "right">
-				<p>In our class, we learned that for a beam with a rectangular cross section, the beam will be more resistant to bending if the beam is vertical with respect to the bending moment (Diagram 1) than if it were horizontal (Diagram 2).  We also know that due to mass distribution, an L-shaped beam (Diagram 3) will have a larger moment of inertia and thus will be more resistant to bending than a vertical rectangular beam of the same cross-sectional area (Diagram 1).  We implemented these ideas in our design by using L-shaped strips of aluminum in the lifting arm instead of simply vertical strips.  This can be seen in [Photo 6].  </p>
+				<p>In our class, we learned that for a beam with a rectangular cross section, the beam will be more resistant to bending if the beam is vertical with respect to the bending moment (Diagram 1) than if it were horizontal (Diagram 2).  We also know that due to mass distribution, an L-shaped beam (Diagram 3) will have a larger moment of inertia and thus will be more resistant to bending than a vertical rectangular beam of the same cross-sectional area (Diagram 1).  We implemented these ideas in our design by using L-shaped strips of aluminum in the lifting arm instead of simply vertical strips.  This can be seen in:  </p>
+				<p id="photo"><img src="https://lh4.googleusercontent.com/iAwH6iIgt8AT-05K6k8T4Ps7yfdI8bULhcAh6kC-vj9Kgo0UxDq-dahbgkFh4oCpNJ_M3zxEwGj-FXQ_fP0AaLwb5YI=w1401-h604"/></p>
 				<p>We also learned that having a closed, but not solid cross section for a beam (Diagram 4) is more effective at resisting twisting than a non-solid open cross section (Diagram 5) or simply a flat beam (Diagram 6).  We utilized this concept in the construction of the support arm.  We joined the four horizontal strips to create a closed loop.  Since the support arm was designed like a truss, it acts more closely to a beam and so we know...BLAH BLAH BLAH.  I'm going to bed...</p>
+			</div>
+		</div>
+		<div>
+			<div class = "left">
+				<p> Diagrams </p>
+			</div>
+			<div class = "right">
+				<p>Things!</p>
 			</div>
 		</div>
 		<div id="footer"></div>
