--- a/index.html
+++ b/index.html
@@ -64,7 +64,26 @@
 				<p> Diagrams </p>
 			</div>
 			<div class = "right">
-				<p>Things!</p>
+				<p>Diagram 1:</p>
+				<p id="photo"><img src = "https://lh5.googleusercontent.com/Mf3qSwPv0wAohcDinyUKHaSq1xhPu1EqAaPpgCLi8vnkVE8P1noakmc9BnNqCEA8gVlqkg=w1401-h604"/></p>
+				<p>Diagram 2:</p>
+				<p id="photo"><img src = "https://lh3.googleusercontent.com/AyLw1urhSC8Tl3nDPVfn5zgHByLow_MxI6AFhaAxV7-KCjFSZnh-5zMx5cejvq-ILJrOKg=w1416-h680"/></p>
+				<p>Diagram 3:</p>
+				<p id="photo"><img src = "https://lh4.googleusercontent.com/LQ1H0KyY9hSCyyOwgoTqY7QjNktYvdzcPagOAjGo8pRTNaKa5p8K4Yjx3juKYM5aWqo8Nw=w1416-h680"/></p>
+				<p>Diagram 4:</p>
+				<p id="photo"><img src = "https://lh6.googleusercontent.com/E2---E-gEbEwRoBb5wxS9ysflHjNFQvAH4hicVGrR3_ZKO-vo-JEnxJ6irMr7sMhSctj2w=w1401-h604"/></p>
+				<p>Diagram 5:</p>
+				<p id="photo"><img src = "https://lh3.googleusercontent.com/wXEBMsSU-xwF40TRUd1yP1wuWjHVT5fN65dofANwCwyqhAE6m-e1P71LWie2g20yid28aA=w1401-h604"/></p>
+				<p>Diagram 6:</p>
+				<p id="photo"><img src = "https://lh5.googleusercontent.com/S-Wn6n1NDN8UzuBQDSVALEJd16AMM8M_38bA92MiWw5UkIa8W4iBUD_sEwD_aiiaguN6zQ=w1401-h604"></p>
+			</div>
+		</div>
+		<div>
+			<div class = "left">
+				<p>Crane photos!</p>
+			</div>
+			<div class = "right">
+				<p> PICTURES WOO! </p>
 			</div>
 		</div>
 		<div id="footer"></div>
