--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			</div>
 			<div class = "right">
 				<p>In our class, we learned that for a beam with a rectangular cross section, the beam will be more resistant to bending if the beam is vertical with respect to the bending moment (Diagram 1) than if it were horizontal (Diagram 2).  We also know that due to mass distribution, an L-shaped beam (Diagram 3) will have a larger moment of inertia and thus will be more resistant to bending than a vertical rectangular beam of the same cross-sectional area (Diagram 1).  We implemented these ideas in our design by using L-shaped strips of aluminum in the lifting arm instead of simply vertical strips.  This can be seen in:  </p>
-				<p id="photo"><img src="https://lh4.googleusercontent.com/iAwH6iIgt8AT-05K6k8T4Ps7yfdI8bULhcAh6kC-vj9Kgo0UxDq-dahbgkFh4oCpNJ_M3zxEwGj-FXQ_fP0AaLwb5YI=w1401-h604"/></p>
+				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/17347368902" title="photo6 by Becca Stokes, on Flickr"><img src="https://farm9.staticflickr.com/8885/17347368902_6cd94b97d2.jpg" width="375" height="500" alt="photo6"></a></p>
 				<p>We also learned that having a closed, but not solid cross section for a beam (Diagram 4) is more effective at resisting twisting than a non-solid open cross section (Diagram 5) or simply a flat beam (Diagram 6).  We utilized this concept in the construction of the support arm.  We joined the four horizontal strips to create a closed loop.  Since the support arm was designed like a truss, it acts more closely to a beam and so we know...BLAH BLAH BLAH.  I'm going to bed...</p>
 			</div>
 		</div>
@@ -65,17 +65,17 @@
 			</div>
 			<div class = "right">
 				<p>Diagram 1:</p>
-				<p id="photo"><img src = "https://lh5.googleusercontent.com/Mf3qSwPv0wAohcDinyUKHaSq1xhPu1EqAaPpgCLi8vnkVE8P1noakmc9BnNqCEA8gVlqkg=w1401-h604"/></p>
+				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/17348808491" title="bending 3 by Becca Stokes, on Flickr"><img src="https://farm9.staticflickr.com/8737/17348808491_4400749c8e.jpg" width="400" height="500" alt="bending 3"></a></p>
 				<p>Diagram 2:</p>
-				<p id="photo"><img src = "https://lh3.googleusercontent.com/AyLw1urhSC8Tl3nDPVfn5zgHByLow_MxI6AFhaAxV7-KCjFSZnh-5zMx5cejvq-ILJrOKg=w1416-h680"/></p>
+				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/17161392818" title="bending 1 by Becca Stokes, on Flickr"><img src="https://farm8.staticflickr.com/7741/17161392818_1af30de2ff.jpg" width="500" height="326" alt="bending 1"></a></p>
 				<p>Diagram 3:</p>
-				<p id="photo"><img src = "https://lh4.googleusercontent.com/LQ1H0KyY9hSCyyOwgoTqY7QjNktYvdzcPagOAjGo8pRTNaKa5p8K4Yjx3juKYM5aWqo8Nw=w1416-h680"/></p>
+				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/17161621500" title="bending 2 by Becca Stokes, on Flickr"><img src="https://farm9.staticflickr.com/8839/17161621500_ca68606582.jpg" width="500" height="453" alt="bending 2"></a></p>
 				<p>Diagram 4:</p>
-				<p id="photo"><img src = "https://lh6.googleusercontent.com/E2---E-gEbEwRoBb5wxS9ysflHjNFQvAH4hicVGrR3_ZKO-vo-JEnxJ6irMr7sMhSctj2w=w1401-h604"/></p>
+				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/17347291032" title="twisting 2 by Becca Stokes, on Flickr"><img src="https://farm9.staticflickr.com/8774/17347291032_79803dcb80.jpg" width="500" height="498" alt="twisting 2"></a></p>
 				<p>Diagram 5:</p>
-				<p id="photo"><img src = "https://lh3.googleusercontent.com/wXEBMsSU-xwF40TRUd1yP1wuWjHVT5fN65dofANwCwyqhAE6m-e1P71LWie2g20yid28aA=w1401-h604"/></p>
+				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/17348808441" title="twisting 3 by Becca Stokes, on Flickr"><img src="https://farm8.staticflickr.com/7690/17348808441_320b4e4006.jpg" width="500" height="478" alt="twisting 3"></a></p>
 				<p>Diagram 6:</p>
-				<p id="photo"><img src = "https://lh5.googleusercontent.com/S-Wn6n1NDN8UzuBQDSVALEJd16AMM8M_38bA92MiWw5UkIa8W4iBUD_sEwD_aiiaguN6zQ=w1401-h604"></p>
+				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/16728937683" title="twisting 1 by Becca Stokes, on Flickr"><img src="https://farm9.staticflickr.com/8708/16728937683_1dd889cb32.jpg" width="500" height="301" alt="twisting 1"></a></p>
 			</div>
 		</div>
 		<div>
@@ -83,7 +83,19 @@
 				<p>Crane photos!</p>
 			</div>
 			<div class = "right">
-				<p> PICTURES WOO! </p>
+				<p>Finished Product:</p>
+				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/16729037443" title="photo3 by Becca Stokes, on Flickr"><img src="https://farm9.staticflickr.com/8863/16729037443_094671b136.jpg" width="500" height="375" alt="photo3"></a></p>
+				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/17161721760" title="photo9 by Becca Stokes, on Flickr"><img src="https://farm8.staticflickr.com/7717/17161721760_3239e8b348.jpg" width="500" height="375" alt="photo9"></a></p>
+				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/16726792454" title="photo2 by Becca Stokes, on Flickr"><img src="https://farm8.staticflickr.com/7698/16726792454_38a111dfee.jpg" width="500" height="375" alt="photo2"></a></p>
+				<p>Tension Wires:</p>
+				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/17161721770" title="photo8 by Becca Stokes, on Flickr"><img src="https://farm8.staticflickr.com/7697/17161721770_907fe036a5.jpg" width="375" height="500" alt="photo8"></a></p>
+				<p>Manuevering the Course: </p>
+				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/17348908271" title="photo1 by Becca Stokes, on Flickr"><img src="https://farm8.staticflickr.com/7677/17348908271_8aff961f76.jpg" width="375" height="500" alt="photo1"></a></p>
+				<p>Servo attachment: </p>
+				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/17349277015" title="photo12 by Becca Stokes, on Flickr"><img src="https://farm9.staticflickr.com/8690/17349277015_ea6a3ebc3f.jpg" width="375" height="500" alt="photo12"></a></p>
+				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/17348908081" title="photo10 by Becca Stokes, on Flickr"><img src="https://farm8.staticflickr.com/7787/17348908081_68bfe490c9.jpg" width="375" height="500" alt="photo10"></a></p>
+				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/17141852817" title="photo11 by Becca Stokes, on Flickr"><img src="https://farm9.staticflickr.com/8781/17141852817_19304f4a12.jpg" width="375" height="500" alt="photo11"></a></p>
+
 			</div>
 		</div>
 		<div id="footer"></div>
