--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
 				<p> Diagrams </p>
 			</div>
 			<div class = "right">
-				<p>Diagram 1:</p>
+				<h4>Diagram 1:</h4>
 				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/17348808491" title="bending 3 by Becca Stokes, on Flickr"><img src="https://farm9.staticflickr.com/8737/17348808491_4400749c8e.jpg" width="400" height="500" alt="bending 3"></a></p>
-				<p>Diagram 2:</p>
+				<h4>Diagram 2:</h4>
 				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/17161392818" title="bending 1 by Becca Stokes, on Flickr"><img src="https://farm8.staticflickr.com/7741/17161392818_1af30de2ff.jpg" width="500" height="326" alt="bending 1"></a></p>
-				<p>Diagram 3:</p>
+				<h4>Diagram 3:</h4>
 				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/17161621500" title="bending 2 by Becca Stokes, on Flickr"><img src="https://farm9.staticflickr.com/8839/17161621500_ca68606582.jpg" width="500" height="453" alt="bending 2"></a></p>
-				<p>Diagram 4:</p>
+				<h4>Diagram 4:</h4>
 				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/17347291032" title="twisting 2 by Becca Stokes, on Flickr"><img src="https://farm9.staticflickr.com/8774/17347291032_79803dcb80.jpg" width="500" height="498" alt="twisting 2"></a></p>
-				<p>Diagram 5:</p>
+				<h4>Diagram 5:</h4>
 				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/17348808441" title="twisting 3 by Becca Stokes, on Flickr"><img src="https://farm8.staticflickr.com/7690/17348808441_320b4e4006.jpg" width="500" height="478" alt="twisting 3"></a></p>
-				<p>Diagram 6:</p>
+				<h4>Diagram 6:</h4>
 				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/16728937683" title="twisting 1 by Becca Stokes, on Flickr"><img src="https://farm9.staticflickr.com/8708/16728937683_1dd889cb32.jpg" width="500" height="301" alt="twisting 1"></a></p>
 			</div>
 		</div>
@@ -83,15 +83,15 @@
 				<p>Crane photos!</p>
 			</div>
 			<div class = "right">
-				<p>Finished Product:</p>
+				<h4>Finished Product:</h4>
 				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/16729037443" title="photo3 by Becca Stokes, on Flickr"><img src="https://farm9.staticflickr.com/8863/16729037443_094671b136.jpg" width="500" height="375" alt="photo3"></a></p>
 				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/17161721760" title="photo9 by Becca Stokes, on Flickr"><img src="https://farm8.staticflickr.com/7717/17161721760_3239e8b348.jpg" width="500" height="375" alt="photo9"></a></p>
 				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/16726792454" title="photo2 by Becca Stokes, on Flickr"><img src="https://farm8.staticflickr.com/7698/16726792454_38a111dfee.jpg" width="500" height="375" alt="photo2"></a></p>
-				<p>Tension Wires:</p>
+				<h4>Tension Wires:</h4>
 				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/17161721770" title="photo8 by Becca Stokes, on Flickr"><img src="https://farm8.staticflickr.com/7697/17161721770_907fe036a5.jpg" width="375" height="500" alt="photo8"></a></p>
-				<p>Manuevering the Course: </p>
+				<h4>Manuevering the Course: </h4>
 				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/17348908271" title="photo1 by Becca Stokes, on Flickr"><img src="https://farm8.staticflickr.com/7677/17348908271_8aff961f76.jpg" width="375" height="500" alt="photo1"></a></p>
-				<p>Servo attachment: </p>
+				<h4>Servo attachment: </h4>
 				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/17349277015" title="photo12 by Becca Stokes, on Flickr"><img src="https://farm9.staticflickr.com/8690/17349277015_ea6a3ebc3f.jpg" width="375" height="500" alt="photo12"></a></p>
 				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/17348908081" title="photo10 by Becca Stokes, on Flickr"><img src="https://farm8.staticflickr.com/7787/17348908081_68bfe490c9.jpg" width="375" height="500" alt="photo10"></a></p>
 				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/17141852817" title="photo11 by Becca Stokes, on Flickr"><img src="https://farm9.staticflickr.com/8781/17141852817_19304f4a12.jpg" width="375" height="500" alt="photo11"></a></p>
