--- a/index.html
+++ b/index.html
@@ -31,7 +31,15 @@
 				<p>Theoretical Performance</p>
 			</div>
 			<div class="right">
-				<p></p>
+				<p>The angle of rotation of the servo motor is around 45 degrees. This restriction is due to the bottom of the lever arm hitting the support.</p>
+				<p>The loop that contacts the weight's bolt is can pivot around its connection to the lever arm, so the translation of the bolt attached to the weight is only vertical.</p>
+				<p>Therefore, we can calculate the theoretical displacement of the weight and the torque used by the motor:</p>
+				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/17170149660" title="torqueThing by Becca Stokes, on Flickr"><img src="https://farm8.staticflickr.com/7715/17170149660_d58a43830e.jpg" width="500" height="192" alt="torqueThing"></a></p>
+				<p>Using the given value that the maximum torque from the motor is 72 oz-in, we can calculate the fraction of the motors' torque being used.</p>
+				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/17357361391" title="torqueRatio by Becca Stokes, on Flickr"><img src="https://farm8.staticflickr.com/7740/17357361391_3d9f251304.jpg" width="500" height="127" alt="torqueRatio"></a></p>
+				<p>Because the fraction is less than 1, we know that the motor will be able to support this load.</p>
+				<h4>Free Body Diagram of Lever Arm:</h4>
+				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/17357361491" title="FBD by Becca Stokes, on Flickr"><img src="https://farm8.staticflickr.com/7702/17357361491_4c741857a9.jpg" width="500" height="375" alt="FBD"></a></p>
 			</div>
 		</div>
 		<div>
@@ -56,7 +64,8 @@
 			<div class = "right">
 				<p>In our class, we learned that for a beam with a rectangular cross section, the beam will be more resistant to bending if the beam is vertical with respect to the bending moment (Diagram 1) than if it were horizontal (Diagram 2).  We also know that due to mass distribution, an L-shaped beam (Diagram 3) will have a larger moment of inertia and thus will be more resistant to bending than a vertical rectangular beam of the same cross-sectional area (Diagram 1).  We implemented these ideas in our design by using L-shaped strips of aluminum in the lifting arm instead of simply vertical strips.  This can be seen in:  </p>
 				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/17347368902" title="photo6 by Becca Stokes, on Flickr"><img src="https://farm9.staticflickr.com/8885/17347368902_6cd94b97d2.jpg" width="375" height="500" alt="photo6"></a></p>
-				<p>We also learned that having a closed, but not solid cross section for a beam (Diagram 4) is more effective at resisting twisting than a non-solid open cross section (Diagram 5) or simply a flat beam (Diagram 6).  We utilized this concept in the construction of the support arm.  We joined the four horizontal strips to create a closed loop.  Since the support arm was designed like a truss, it acts more closely to a beam and so we know...BLAH BLAH BLAH.  I'm going to bed...</p>
+				<p>We also learned that having a closed, but not solid cross section for a beam (Diagram 4) is more effective at resisting twisting than a non-solid open cross section (Diagram 5) or simply a flat beam (Diagram 6).  We utilized this concept in the construction of the support arm.  We joined the four horizontal strips to create a closed loop.  Since the support arm was designed like a truss, it acts more closely to a beam and so we know that it will better resist twisting than if we had not joined the strips into a loop.  This can be seen in:</p>
+				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/17161721770" title="photo8 by Becca Stokes, on Flickr"><img src="https://farm8.staticflickr.com/7697/17161721770_907fe036a5.jpg" width="375" height="500" alt="photo8"></a></p>
 			</div>
 		</div>
 		<div>
@@ -87,8 +96,6 @@
 				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/16729037443" title="photo3 by Becca Stokes, on Flickr"><img src="https://farm9.staticflickr.com/8863/16729037443_094671b136.jpg" width="500" height="375" alt="photo3"></a></p>
 				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/17161721760" title="photo9 by Becca Stokes, on Flickr"><img src="https://farm8.staticflickr.com/7717/17161721760_3239e8b348.jpg" width="500" height="375" alt="photo9"></a></p>
 				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/16726792454" title="photo2 by Becca Stokes, on Flickr"><img src="https://farm8.staticflickr.com/7698/16726792454_38a111dfee.jpg" width="500" height="375" alt="photo2"></a></p>
-				<h4>Tension Wires:</h4>
-				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/17161721770" title="photo8 by Becca Stokes, on Flickr"><img src="https://farm8.staticflickr.com/7697/17161721770_907fe036a5.jpg" width="375" height="500" alt="photo8"></a></p>
 				<h4>Manuevering the Course: </h4>
 				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/17348908271" title="photo1 by Becca Stokes, on Flickr"><img src="https://farm8.staticflickr.com/7677/17348908271_8aff961f76.jpg" width="375" height="500" alt="photo1"></a></p>
 				<h4>Servo attachment: </h4>
