--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<p>Theoretical Performance</p>
 			</div>
 			<div class="right">
-				<p>The angle of rotation of the servo motor is around 45 degrees. This restriction is due to the bottom of the lever arm hitting the support.</p>
+				<p>The measured angle of rotation of the servo motor is 45 degrees. This restriction is due to the bottom of the lever arm hitting the support.</p>
 				<p>The loop that contacts the weight's bolt is can pivot around its connection to the lever arm, so the translation of the bolt attached to the weight is only vertical.</p>
 				<p>Therefore, we can calculate the theoretical displacement of the weight and the torque used by the motor:</p>
 				<p id="photo"><a href="https://www.flickr.com/photos/132153344@N03/17170149660" title="torqueThing by Becca Stokes, on Flickr"><img src="https://farm8.staticflickr.com/7715/17170149660_d58a43830e.jpg" width="500" height="192" alt="torqueThing"></a></p>
